--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "vercel-build": "prisma generate && next build"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.3.0",
     "@codemirror/commands": "^6.1.2",
+    "@codemirror/lang-javascript": "^6.1.1",
     "@codemirror/lang-markdown": "^6.0.4",
+    "@codemirror/language": "^6.3.0",
     "@codemirror/language-data": "^6.1.0",
+    "@codemirror/lint": "^6.0.0",
+    "@codemirror/search": "^6.2.2",
     "@codemirror/state": "^6.1.2",
     "@codemirror/theme-one-dark": "^6.1.0",
     "@codemirror/view": "^6.4.0",
