--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.0",
+    "@uiw/react-codemirror": "^4.13.0",
     "@vercel/analytics": "^0.1.3",
     "clsx": "^1.2.1",
     "codemirror": "^6.0.1",
@@ -74,15 +75,16 @@
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.5.0",
     "csstype": "^3.1.1",
     "eslint": "8.21.0",
     "eslint-config-next": "^13.0.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.4.0",
-    "tailwindcss": "^3.1.7",
+    "tailwindcss": "^3.2.2",
     "typescript": "4.7.4"
   }
 }
