--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/table": "^2.0.4",
     "@hookform/resolvers": "^2.9.10",
+    "@near-wallet-selector/core": "^7.2.0",
+    "@near-wallet-selector/modal-ui": "^7.2.0",
+    "@near-wallet-selector/my-near-wallet": "^7.2.0",
+    "@near-wallet-selector/near-wallet": "^7.2.0",
+    "@near-wallet-selector/sender": "^7.2.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
