--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,4 @@
 # -----------------------------------------------------------------------------
-# Authentication (NextAuth.js)
+# Liveblocks
 # -----------------------------------------------------------------------------
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=
-
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-
-# -----------------------------------------------------------------------------
-# Database (MySQL - PlanetScale)
-# -----------------------------------------------------------------------------
-DATABASE_URL="mysql://root:root@localhost:3306/near-journey?schema=public"
-
+NEXT_PUBLIC_API_URL=
