--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/table": "^2.0.4",
     "@hookform/resolvers": "^2.9.10",
+    "@liveblocks/client": "^0.19.0",
+    "@liveblocks/zustand": "^0.19.0",
     "@near-wallet-selector/core": "^7.2.0",
     "@near-wallet-selector/modal-ui": "^7.2.0",
     "@near-wallet-selector/my-near-wallet": "^7.2.0",
@@ -51,6 +53,7 @@
     "@vercel/analytics": "^0.1.3",
     "clsx": "^1.2.1",
     "codemirror": "^6.0.1",
+    "dotenv": "^16.0.3",
     "fast-glob": "^3.2.12",
     "hasha": "^5.2.2",
     "lucide-react": "^0.92.0",
@@ -74,7 +77,8 @@
     "tailwindcss-animate": "^1.0.5",
     "vfile": "^5.3.5",
     "vfile-matter": "^4.0.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
