--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "fast-glob": "^3.2.12",
     "hasha": "^5.2.2",
     "lucide-react": "^0.92.0",
+    "nanoid": "^4.0.0",
     "near-api-js": "^1.1.0",
     "next": "^13.0.3-canary.0",
     "next-auth": "^4.15.0",
